# sportsipy

./: README.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: exhaustive.yml  pushtests.yml
sportsipy/: utils.py
sportsipy/fb/: fb_utils.py  roster.py  schedule.py  team.py
sportsipy/mlb/: boxscore.py  player.py  roster.py
sportsipy/nba/: boxscore.py  nba_utils.py  player.py  roster.py  schedule.py
sportsipy/ncaab/: boxscore.py  conferences.py  player.py  rankings.py  roster.py
sportsipy/ncaaf/: boxscore.py  conferences.py  player.py  rankings.py  roster.py
sportsipy/nfl/: boxscore.py  player.py  roster.py
sportsipy/nhl/: boxscore.py  player.py  roster.py
sportsipy_dashboard/: README.md  __init__.py  app.py  pyproject.toml  requirements.txt  setup.py  wsgi.py
sportsipy_dashboard/assets/: custom.css
sportsipy_dashboard/components/: __init__.py  navbar.py  sidebar.py
sportsipy_dashboard/pages/: builder.py  explorer.py  home.py  queries.py
sportsipy_dashboard/sportsipy_dashboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sportsipy_dashboard/tests/: __init__.py  test_code_generator.py  test_exporters.py  test_query_manager.py
sportsipy_dashboard/utils/: __init__.py  code_generator.py  data_loader.py  exporters.py  query_manager.py
tests/unit/: test_fb_roster.py  test_fb_schedule.py  test_fb_team.py  test_fb_utils.py  test_mlb_boxscore.py  test_mlb_roster.py  test_mlb_schedule.py  test_mlb_teams.py  test_nba_boxscore.py  test_nba_roster.py  test_nba_schedule.py  test_nba_utils.py  test_ncaab_boxscore.py  test_ncaab_teams.py  (+13 more)
(+31 files in other folders)
